--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,35 @@
     "p-queue": "^2.4.2",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
-    "ws": "^6.0.0"
+    "ws": "^6.0.0",
+    "fs-extra": "^6.0.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-html-reporter": "^0.5.2",
+    "eslint-plugin-import": "^2.13.0",
+    "husky": "^1.0.0-rc.6",
+    "lint-staged": "^7.1.0",
+    "nodemon": "^1.11.0",
+    "nyc": "^12.0.2",
+    "standard-version": "^4.4.0",
+    "prettier": "^1.13.6"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
