--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "lint-staged"
   },
   "keywords": [],
@@ -45,11 +45,12 @@
     "eslint-html-reporter": "^0.5.2",
     "eslint-plugin-import": "^2.13.0",
     "husky": "^1.0.0-rc.6",
+    "jest": "^23.4.2",
     "lint-staged": "^7.1.0",
     "nodemon": "^1.11.0",
     "nyc": "^12.0.2",
-    "standard-version": "^4.4.0",
-    "prettier": "^1.13.6"
+    "prettier": "^1.13.6",
+    "standard-version": "^4.4.0"
   },
   "husky": {
     "hooks": {
