--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
     "lint": "lint-staged"
   },
   "keywords": [],
@@ -44,6 +46,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-html-reporter": "^0.5.2",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "^7.10.0",
     "husky": "^1.0.0-rc.6",
     "jest": "^23.4.2",
     "lint-staged": "^7.1.0",
@@ -61,7 +64,6 @@
   "lint-staged": {
     "src/**/*.js": [
       "prettier --write",
-      "eslint --fix",
       "git add"
     ]
   }
