--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "no-restricted-syntax":1,
     "no-param-reassign": 1,
     "no-nested-ternary": 1,
-    "no-control-regex":"off"
+    "no-control-regex":"off",
+    "class-methods-use-this":"off"
   }
 }
