--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "busboy": "^0.2.14",
     "chalk": "^2.4.1",
-    "fs-extra": "^6.0.1",
+    "fs-extra": "^7.0.0",
     "http-proxy": "^1.17.0",
     "ioredis": "^3.2.2",
     "koa": "^2.5.1",
@@ -29,12 +29,13 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.0",
     "mos-mss": "^0.2.1",
-    "mysql2": "^1.5.3",
+    "mysql2": "^1.6.1",
     "nanoid": "^1.0.2",
     "nunjucks": "^3.1.3",
     "p-queue": "^2.4.2",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
+    "winston": "^3.0.0",
     "ws": "^6.0.0"
   },
   "devDependencies": {
