--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "no-param-reassign": 1,
     "no-nested-ternary": 1,
     "no-control-regex":"off",
-    "class-methods-use-this":"off"
+    "class-methods-use-this":"off",
+    "no-unused-vars":"off"
   }
 }
