--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "koa-compress": "^3.0.0",
     "koa-is-json": "^1.0.0",
     "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
     "mime": "^2.3.1",
     "moment": "^2.22.2",
