--- a/package.json
+++ b/package.json
@@ -5,14 +5,35 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js",
+    "start": "node ./server/index.js",
+    "dev": "nodemon ./server/index.js",
     "lint": "lint-staged"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.55",
+    "classnames": "^2.2.6",
+    "crel": "^3.1.0",
+    "eventemitter3": "^3.1.0",
+    "marked": "^0.4.0",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
+    "rabjs": "^5.0.0",
+    "rc-trigger": "^2.5.4",
+    "react": "^16.4.2",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
+    "react-dom": "^16.4.2",
+    "react-grid-layout": "^0.16.6",
+    "react-loadable": "^5.4.0",
+    "react-measure": "^2.0.2",
+    "react-motion": "^0.5.2",
+    "react-router": "^4.3.1",
+    "react-router-transition": "^1.2.1",
+    "react-sortable-hoc": "^0.8.3",
     "busboy": "^0.2.14",
     "chalk": "^2.4.1",
     "fs-extra": "^7.0.0",
@@ -28,7 +49,6 @@
     "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
     "mime": "^2.3.1",
-    "moment": "^2.22.2",
     "mongodb": "^3.1.0",
     "mos-mss": "^0.2.1",
     "mysql2": "^1.6.1",
@@ -41,21 +61,56 @@
     "ws": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-decorators": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-do-expressions": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-optional-chaining": "^7.0.0-beta.55",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/preset-react": "^7.0.0-beta.55",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "autoprefixer": "^9.1.0",
+    "babel-loader": "^8.0.0-beta.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-html-reporter": "^0.5.2",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0-rc.6",
     "jest": "^23.4.2",
+    "koa-webpack": "^5.1.0",
     "lint-staged": "^7.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
     "nodemon": "^1.11.0",
     "nyc": "^12.0.2",
+    "postcss": "^7.0.2",
+    "postcss-clearfix": "^2.0.1",
+    "postcss-loader": "^2.1.6",
     "prettier": "^1.13.6",
-    "standard-version": "^4.4.0"
+    "sass-loader": "^7.1.0",
+    "standard-version": "^4.4.0",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4"
   },
   "husky": {
     "hooks": {
@@ -64,7 +119,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.js": [
+    "server/**/*.js": [
       "prettier --write",
       "git add"
     ]
