--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb-base","prettier"],
+  "extends": ["airbnb","prettier"],
   "globals": {
     "Page": true,
     "Component": true,
@@ -31,5 +31,6 @@
     "no-control-regex":"off",
     "class-methods-use-this":"off",
     "no-unused-vars":"off"
+
   }
 }
