--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,8 @@
     "no-nested-ternary": 1,
     "no-control-regex":"off",
     "class-methods-use-this":"off",
-    "no-unused-vars":"off"
-
+    "no-unused-vars":"off",
+    "global-require": "off",
+    "import/no-dynamic-require": "off"
   }
 }
